--- a/views/user/shop.hbs
+++ b/views/user/shop.hbs
@@ -54,7 +54,7 @@
                                         </a>
 
                                         <div class="product-action-vertical">
-                                            <a href="#" class="btn-product-icon btn-wishlist btn-expandable"><span>add to wishlist</span></a>
+                                            <a href="#" class="btn-product-icon btn-wishlist btn-expandable" data-id="{{this._id}}"><span>add to wishlist</span></a>
                                         </div><!-- End .product-action -->
 
                                         {{!-- <div class="product-action action-icon-top"> use it as reference if need in below --}}
@@ -353,3 +353,53 @@
 
 {{>mobileView}}
 
+    <script>
+    document.querySelectorAll('.btn-wishlist').forEach(button => {
+        button.addEventListener('click', async function(event) {
+            event.preventDefault();
+            const productId = this.getAttribute('data-id');
+            
+            try {
+                const response = await fetch('/addToWishlist', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ productId })
+                });
+                
+                const result = await response.json();
+                if (result.success) {
+                    Swal.fire({
+                        title: 'Added to wishlist!',
+                        text: 'The product has been added to your wishlist.',
+                        icon: 'success',
+                        toast: true,
+                        position: 'top-end',
+                        timer: 3000,
+                        showConfirmButton: false
+                    });
+                } else {
+                    Swal.fire({
+                        title: result.message,
+                        icon: 'success',
+                        toast: true,
+                        position: 'top-end',
+                        timer: 3000,
+                        showConfirmButton: false
+                    });
+                }
+            } catch (error) {
+                Swal.fire({
+                    title: 'Error',
+                    text: 'An error occurred while adding to the wishlist.',
+                    icon: 'error',
+                    toast: true,
+                    position: 'top-end',
+                    timer: 3000,
+                    showConfirmButton: false
+                });
+            }
+        });
+    });
+</script>
