--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -530,7 +530,11 @@
                                             </a>
 
                                             <div class="product-action-vertical">
-                                                <a href="#" class="btn-product-icon btn-wishlist" title="Add to wishlist" data-id="{{this._id}}"><span>add to wishlist</span></a>
+                                                {{#if ../user}}
+                                                <a href="#" class="btn-product-icon btn-wishlist " title="Add to wishlist" data-id="{{this._id}}"><span>add to wishlist</span></a>
+                                                {{else}}
+                                                <a href="#" class="btn-product-icon btn-wishlist " title="Add to wishlist" ><span>add to wishlist</span></a>
+                                                {{/if}}
                                             </div><!-- End .product-action -->
 
                                             <div class="product-action product-action-transparent">
@@ -1084,6 +1088,18 @@
         button.addEventListener('click', async function(event) {
             event.preventDefault();
             const productId = this.getAttribute('data-id');
+            const user = {{user}}
+
+            if (!user) {
+            return Swal.fire({
+                text: 'Please login to add products to wishlist!',
+                icon: 'error',
+                toast: true,
+                position: 'top-end',
+                timer: 3000,
+                showConfirmButton: false
+            })
+         }
             
             try {
                 const response = await fetch('/addToWishlist', {
@@ -1108,7 +1124,7 @@
                 } else {
                     Swal.fire({
                         title: result.message,
-                        icon: 'success',
+                        icon: 'warning',
                         toast: true,
                         position: 'top-end',
                         timer: 3000,
@@ -1129,3 +1145,5 @@
         });
     });
 </script>
+
+
