fixed wishlist errors

--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -41,22 +41,22 @@
 							    			<input type="password" class="form-control" id="singin-password-2" name="password" required>
 							    		</div><!-- End .form-group -->
 
-							    		<div class="form-footer">
-							    			<button type="submit" class="btn btn-outline-primary-2">
-			                					<span>LOG IN</span>
-			            						<i class="icon-long-arrow-right"></i>
-			                				</button>
-
-			                				<div class="custom-control custom-checkbox">
-												<input type="checkbox" class="custom-control-input" id="signin-remember-2">
-												<label class="custom-control-label" for="signin-remember-2">Remember Me</label>
-											</div><!-- End .custom-checkbox -->
-
-											<a href="#" class="forgot-link">Forgot Your Password?</a>
-							    		</div><!-- End .form-footer -->
+											<div class="form-footer">
+												<button type="submit" class="btn btn-outline-primary-2">
+													<span>LOG IN</span>
+													<i class="icon-long-arrow-right"></i>
+												</button>
+											
+												{{!-- <div class="custom-control custom-checkbox">
+													<input type="checkbox" class="custom-control-input" id="signin-remember-2">
+													<label class="custom-control-label" for="signin-remember-2">Remember Me</label>
+												</div><!-- End .custom-checkbox --> --}}
+											
+												<a href="#" class="forgot-link">Forgot Your Password?</a>
+											</div><!-- End .form-footer -->
 							    	</form>
 							    	<div class="form-choice">
-								    	<p class="text-center">or sign in with</p>
+								    	{{!-- <p class="text-center">or sign in with</p>
 								    	<div class="row">
 								    		<div class="col-sm-6">
 								    			<a href="#" class="btn btn-login btn-g">
@@ -70,7 +70,7 @@
 								    				Login With Facebook
 								    			</a>
 								    		</div><!-- End .col-6 -->
-								    	</div><!-- End .row -->
+								    	</div><!-- End .row --> --}}
 							        <p class="text-center mt-3">Don't have an Account?<a href="/register"> Sign Up</a></p>	
 							    	</div><!-- End .form-choice -->
 							    </div><!-- .End .tab-pane -->
