--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -63,7 +63,7 @@
 							    		</div><!-- End .form-footer -->
 							    	</form>
 							    	<div class="form-choice">
-								    	<p class="text-center">or sign in with</p>
+								    	{{!-- <p class="text-center">or sign in with</p>
 								    	<div class="row">
 								    		<div class="col-sm-6">
 								    			<a href="#" class="btn btn-login btn-g">
@@ -77,7 +77,7 @@
 								    				Login With Facebook
 								    			</a>
 								    		</div><!-- End .col-6 -->
-								    	</div><!-- End .row -->
+								    	</div><!-- End .row --> --}}
 											<p class="text-center mt-3">Already have an Account?<a href="/login"> Sign In</a></p>	
 							    	</div><!-- End .form-choice -->
 							    </div><!-- .End .tab-pane -->
