--- a/views/user/resetPasswpord.hbs
+++ b/views/user/resetPasswpord.hbs
@@ -18,7 +18,7 @@
             			<div class="form-tab">
 	            			<ul class="nav nav-pills nav-fill" role="tablist">
 							    <li class="nav-item">
-							        <a class="nav-link active" id="signin-tab-2" data-toggle="tab" href="#signin-2" role="tab" aria-controls="signin-2" aria-selected="true">Sign In</a>
+							        <a class="nav-link active" id="signin-tab-2" data-toggle="tab" href="#signin-2" role="tab" aria-controls="signin-2" aria-selected="true">Password Reset</a>
 							    </li>
 							</ul>
 							<div class="tab-content">
